# ChangeLog for media-libs/gexiv2
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/gexiv2/ChangeLog,v 1.4 2011/06/09 08:11:48 radhermit Exp $

*gexiv2-0.3.1 (09 Jun 2011)

  09 Jun 2011; Tim Harder <radhermit@gentoo.org> +gexiv2-0.3.1.ebuild:
  Version bump and add static-libs USE flag.

  21 Dec 2010; Samuli Suominen <ssuominen@gentoo.org> gexiv2-0.2.1.ebuild,
  +files/gexiv2-0.2.1-new-exiv2.patch:
  Fix compability with exiv2 >= 0.21 API wrt #349150 by Alexandre Rostovtsev.
  Fix install with multilib-strict. Punt useless .la files. Don't call econf
  for custom ./configure script. Don't use gnome2.eclass anymore, it's only
  bringing in unused USE flags (like "debug").

*gexiv2-0.2.1 (19 Sep 2010)

  19 Sep 2010; Benedikt Böhm <hollow@gentoo.org> +gexiv2-0.2.1.ebuild:
  version bump wrt #334827

*gexiv2-0.1.0 (22 Aug 2010)

  22 Aug 2010; Benedikt Böhm <hollow@gentoo.org> +gexiv2-0.1.0.ebuild,
  +metadata.xml:
  initial ebuild, bug #327011
