@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/gexiv2
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/gexiv2/ChangeLog,v 1.4 2011/06/09 08:11:48 radhermit Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/gexiv2/ChangeLog,v 1.5 2012/03/29 07:03:21 jlec Exp $
+
+*gexiv2-0.4.1 (29 Mar 2012)
+
+  29 Mar 2012; Justin Lecher <jlec@gentoo.org> +gexiv2-0.4.1.ebuild:
+  Non-maintainer version bump, needed for shotwell bump
 
 *gexiv2-0.3.1 (09 Jun 2011)
 
